--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,7 +66,11 @@ jobs:
         env:
           BUILD_PLATFORM: 'amd64'
         run: |
-          docker build -f ./docker/Dockerfile --progress=plain -t $THIS_TAG -t $IMAGE:latest .
+          docker build \
+            -f ./docker/Dockerfile \
+            --progress=plain \
+            -t "documenso/documenso-$BUILD_PLATFORM:latest" \
+            .
 
       - name: Push
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
