--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,16 +69,15 @@ jobs:
           docker build \
             -f ./docker/Dockerfile \
             --progress=plain \
-            -t "documenso/documenso-$BUILD_PLATFORM:latest" \
+            -t $THIS_TAG \
+            -t $IMAGE:latest
             .
 
       - name: Push
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         run: |
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
+          docker push $THIS_TAG \
+          docker push $IMAGE:latest
 
       - name: Deploy
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
