Fix Docker push

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,7 +70,7 @@ jobs:
             -f ./docker/Dockerfile \
             --progress=plain \
             -t $THIS_TAG \
-            -t $IMAGE:latest
+            -t $IMAGE:latest \
             .
 
       - name: Push
