--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,7 +50,7 @@ jobs:
         env:
           GIT_SHA: ${{ github.sha }}
         run: |
-          IMAGE=$AWS_ACCOUNT.dkr.ecr.ap-northeast-1.amazonaws.com/$ECR_REPOSITORY
+          IMAGE=898622234277.dkr.ecr.ap-northeast-1.amazonaws.com/$ECR_REPOSITORY
           THIS_TAG="$IMAGE:$(git rev-parse --short $GIT_SHA)"
           TAGS="$IMAGE:latest,$THIS_TAG"
 
@@ -70,6 +70,7 @@ jobs:
           docker build \
             -f ./docker/Dockerfile \
             --progress=plain \
+            -t $THIS_TAG \
             -t $IMAGE:latest \
             .
 
