fix: add cert temporarily for testing

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -88,13 +88,11 @@ RUN adduser --system --uid 1001 nodejs
 
 USER nodejs
 
-WORKDIR /app
-
-COPY --from=builder --chown=nodejs:nodejs /app/out/json/ .
-# Copy the tailwind config files across
-COPY --from=builder --chown=nodejs:nodejs /app/out/full/packages/tailwind-config ./packages/tailwind-config
-
-RUN npm ci --only=production
+COPY --from=installer /app/apps/web/next.config.js .
+COPY --from=installer /app/apps/web/package.json .
+# Copy the certificate file into the image
+# TODO: change it later to a proper cert
+COPY --from=installer /app/apps/web/example/cert.p12 /opt/documenso/cert.p12
 
 # Automatically leverage output traces to reduce image size
 # https://nodejs.org/docs/advanced-features/output-file-tracing
