--- a/turbo.json
+++ b/turbo.json
@@ -129,6 +129,7 @@
     "NEXT_PRIVATE_TRIGGER_API_URL",
     "NEXT_PRIVATE_INNGEST_APP_ID",
     "NEXT_PRIVATE_SUPPORT_EMAIL",
+    "NEXT_PRIVATE_LOGGER_HONEY_BADGER_API_KEY",
     "INNGEST_EVENT_KEY",
     "NEXT_PRIVATE_INNGEST_EVENT_KEY",
     "CI",
