--- a/apps/marketing/package.json
+++ b/apps/marketing/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@documenso/assets": "*",
+    "@documenso/ee": "*",
     "@documenso/lib": "*",
     "@documenso/tailwind-config": "*",
     "@documenso/trpc": "*",
@@ -28,6 +29,7 @@
     "embla-carousel": "^8.1.3",
     "embla-carousel-autoplay": "^8.1.3",
     "embla-carousel-react": "^8.1.3",
+    "cookie-es": "^1.0.0",
     "framer-motion": "^10.12.8",
     "lucide-react": "^0.279.0",
     "luxon": "^3.4.0",
@@ -37,12 +39,15 @@
     "next-axiom": "^1.5.1",
     "next-contentlayer": "^0.3.4",
     "next-plausible": "^3.10.1",
+    "next-themes": "^0.2.1",
     "perfect-freehand": "^1.2.0",
     "posthog-js": "^1.77.3",
     "react": "^18",
     "react-confetti": "^6.1.0",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.43.9",
+    "react-hotkeys-hook": "^4.4.1",
     "react-icons": "^4.11.0",
     "recharts": "^2.7.2",
     "sharp": "0.32.6",
