--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,8 +4,8 @@ on:
   workflow_call:
   push:
     branches: ['main']
-  pull_request:
-    branches: ['main']
+  # pull_request:
+  #   branches: ['main']
 env:
   AWS_REGION: ap-northeast-1
   AWS_ACCOUNT: 898622234277
@@ -50,11 +50,10 @@ jobs:
         env:
           GIT_SHA: ${{ github.sha }}
         run: |
-          IMAGE=898622234277.dkr.ecr.ap-northeast-1.amazonaws.com/$ECR_REPOSITORY
+          IMAGE=$AWS_ACCOUNT.dkr.ecr.ap-northeast-1.amazonaws.com/$ECR_REPOSITORY
           THIS_TAG="$IMAGE:$(git rev-parse --short $GIT_SHA)"
           TAGS="$IMAGE:latest,$THIS_TAG"
 
-          echo "image=$IMAGE" >> $GITHUB_OUTPUT
           echo "this_tag=$THIS_TAG" >> $GITHUB_OUTPUT
 
           if [ '${{ github.event_name }}' = 'pull_request' ]; then
@@ -70,13 +69,14 @@ jobs:
           docker build \
             -f ./docker/Dockerfile \
             --progress=plain \
-            -t 898622234277.dkr.ecr.ap-northeast-1.amazonaws.com/signezily:latest \
+            -t "documenso/documenso-$BUILD_PLATFORM:latest" \
             .
 
       - name: Push
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: |
-          docker push 898622234277.dkr.ecr.ap-northeast-1.amazonaws.com/signezily:latest
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
 
       - name: Deploy
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
