--- a/docker/Dockerfile.marketing
+++ b/docker/Dockerfile.marketing
@@ -109,8 +109,8 @@ COPY --from=installer --chown=nextjs:nodejs /app/node_modules/@prisma/ ./node_mo
 RUN mkdir node_modules/.bin
 RUN ln -s /app/node_modules/prisma/build/index.js ./node_modules/.bin/prisma
 
+# RUN mkdir /opt/documenso/
+# Get the start script from docker/start.sh
+COPY --chown=nextjs:nodejs ./docker/start.sh ./start.sh
 
-# Get the start script from docker/start_marketing.sh
-COPY --chown=nextjs:nodejs ./docker/start_marketing.sh ./start_marketing.sh
-
-CMD ["sh", "start_marketing.sh"]
+CMD ["sh", "start.sh", "marketing"]
