--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -73,7 +73,7 @@ jobs:
             .
 
       - name: Push
-        if: github.ref == 'refs/heads/main'
+        # if: github.ref == 'refs/heads/main'
         #  && github.event_name == 'push'
         run: |
           # docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
