--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -4,8 +4,16 @@ on:
   workflow_call:
   push:
     branches: ['main']
+    paths:
+      - ".github/workflows/build_docs.yml"
+      - "docker/Dockerfile.documentation"
+      - "apps/documentation/**"
   pull_request:
     branches: ['main']
+    paths:
+      - ".github/workflows/build_docs.yml"
+      - "docker/Dockerfile.documentation"
+      - "apps/documentation/**"
 env:
   AWS_REGION: ap-northeast-1
   AWS_ACCOUNT: 898622234277
