--- a/.github/workflows/build_marketing.yml
+++ b/.github/workflows/build_marketing.yml
@@ -55,7 +55,7 @@ jobs:
 
       - name: Call Determine Changes Workflow
         id: determine_changes
-        uses: ./.github/workflows/determine_changes.yml
+        uses: ./determine_changes.yml
         with:
           documenso-web-path: "apps/web/**"
           documenso-marketing-path: "apps/marketing/**"
