--- a/.github/workflows/build_marketing.yml
+++ b/.github/workflows/build_marketing.yml
@@ -60,7 +60,7 @@ jobs:
 
       - name: Call Determine Changes Workflow
         id: determine_changes
-        uses: ./.github/workflows/determine_changes.yml
+        uses: ./.github/actions/determine_changes
         with:
           documenso-web-path: "apps/web/**"
           documenso-marketing-path: "apps/marketing/**"
