--- a/.github/workflows/build_marketing.yml
+++ b/.github/workflows/build_marketing.yml
@@ -1,17 +1,17 @@
-name: Build Docker Marketing
+name: Build Docker marketing
 
 on:
   workflow_call:
   push:
     branches: ['main']
     paths:
-      - ".github/workflows/build_marketing.yml"
+      - ".github/workflows/build_docs.yml"
       - "docker/Dockerfile.marketing"
       - "apps/marketing/**"
   pull_request:
     branches: ['main']
     paths:
-      - ".github/workflows/build_marketing.yml"
+      - ".github/workflows/build_docs.yml"
       - "docker/Dockerfile.marketing"
       - "apps/marketing/**"
 env:
@@ -53,90 +53,40 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Debuging
+      - name: Docker tags
+        id: tags
+        env:
+          GIT_SHA: ${{ github.sha }}
         run: |
-          ls -la .github/actions/determine_changes
-          pwd
+          IMAGE=$AWS_ACCOUNT.dkr.ecr.ap-northeast-1.amazonaws.com/$ECR_REPOSITORY
+          THIS_TAG="$IMAGE:$(git rev-parse --short $GIT_SHA)"
+          TAGS="$IMAGE:marketing,$THIS_TAG"
 
-      # - name: Call Determine Changes Workflow
-      #   id: determine_changes
-      #   uses: ./.github/actions/determine_changes
-      #   with:
-      #     documenso-web-path: "apps/web/**"
-      #     documenso-marketing-path: "apps/marketing/**"
-      #     documenso-documentation-path: "apps/documentation/**"
+          echo "this_tag=$THIS_TAG" >> $GITHUB_OUTPUT
 
+          if [ '${{ github.event_name }}' = 'pull_request' ]; then
+            echo "tags=$THIS_TAG" >> $GITHUB_OUTPUT
+          else
+            echo "tags=$TAGS" >> $GITHUB_OUTPUT
+          fi
 
-      # - name: Determine Changes
-      #   id: determine_changes
-      #   env:
-      #     GITHUB_EVENT_BEFORE: ${{ github.event.before || 'HEAD~1' }}
-      #     GITHUB_SHA: ${{ github.sha }}
-      #   run: |
-      #     ./.github/workflows/determine_changes.sh
-      # # chmod +x ./.github/workflows/determine_changes.sh
-
-      - name: Determine if Documentation site has changed
-        id: docs_app_check
-        run: |
-          git diff --name-only ${{ github.event.pull_request.base.sha || github.event.before || 'HEAD~1' }} ${{ github.sha }} | grep -q "^apps/documentation/" && echo "changed=true" || echo "changed=false"
-        shell: bash
-
-      # - name: Build Documenso web
-      #   if: steps.determine_changes.outputs.web_changed == 'true'
-      #   env:
-      #     BUILD_PLATFORM: 'amd64'
-      #   run: |
-      #     docker build \
-      #       -f ./docker/Dockerfile \
-      #       --progress=plain \
-      #       -t "898622234277.dkr.ecr.ap-northeast-1.amazonaws.com/signezily:latest" \
-      #       .
-
-      # - name: Build Marketing
-      #   if: steps.determine_changes.outputs.marketing_changed == 'true'
-      #   env:
-      #     BUILD_PLATFORM: 'amd64'
-      #   run: |
-      #     docker build \
-      #       -f ./docker/Dockerfile.marketing \
-      #       --progress=plain \
-      #       -t "898622234277.dkr.ecr.ap-northeast-1.amazonaws.com/signezily:marketing" \
-      #       .
-
-      - name: Build Documentation
-        if: steps.docs_app_check.outputs.changed == 'true'  
-        # if: steps.determine_changes.outputs.documentation_changed == 'true'
+      - name: Build
         env:
           BUILD_PLATFORM: 'amd64'
         run: |
           docker build \
-            -f ./docker/Dockerfile.documentation \
+            -f ./docker/Dockerfile.marketing \
             --progress=plain \
-            -t "898622234277.dkr.ecr.ap-northeast-1.amazonaws.com/signezily:documentation" \
+            -t "898622234277.dkr.ecr.ap-northeast-1.amazonaws.com/signezily:marketing" \
             .
 
-      # - name: Pushing documenso web image
-      #   if: steps.determine_changes.outputs.web_changed == 'true'
-      #   # if: github.ref == 'refs/heads/main'
-      #   #  && github.event_name == 'push'
-      #   run: |
-      #     docker push 898622234277.dkr.ecr.ap-northeast-1.amazonaws.com/signezily:latest
-      
-      # - name: Pushing documenso marketing image
-      #   if: steps.determine_changes.outputs.marketing_changed == 'true'
-      #   # if: github.ref == 'refs/heads/main'
-      #   #  && github.event_name == 'push'
-      #   run: |
-      #     docker push 898622234277.dkr.ecr.ap-northeast-1.amazonaws.com/signezily:marketing
-
-      - name: Pushing documenso documentation image
-        if: steps.docs_app_check.outputs.changed == 'true'  
-        # if: steps.determine_changes.outputs.documentation_changed == 'true'
+      - name: Push
         # if: github.ref == 'refs/heads/main'
         #  && github.event_name == 'push'
         run: |
-          docker push 898622234277.dkr.ecr.ap-northeast-1.amazonaws.com/signezily:documentation
+            docker push 898622234277.dkr.ecr.ap-northeast-1.amazonaws.com/signezily:marketing
+          # docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          # docker push $ECR_REGISTRY/$ECR_REPOSITORY:marketing
 
       - name: Deploy
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
