--- a/docker/Dockerfile.marketing
+++ b/docker/Dockerfile.marketing
@@ -81,6 +81,8 @@ FROM base AS runner
 
 WORKDIR /app
 
+RUN apk add --no-cache openssl
+
 # Don't run production as root
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
@@ -109,7 +111,7 @@ COPY --from=installer --chown=nextjs:nodejs /app/node_modules/@prisma/ ./node_mo
 RUN mkdir node_modules/.bin
 RUN ln -s /app/node_modules/prisma/build/index.js ./node_modules/.bin/prisma
 
-# RUN mkdir /opt/documenso/
+COPY --chown=nextjs:nodejs ./docker/generate_cert_p12.sh ./generate_cert_p12.sh
 # Get the start script from docker/start.sh
 COPY --chown=nextjs:nodejs ./docker/start.sh ./start.sh
 
