--- a/docker/Dockerfile.documentation
+++ b/docker/Dockerfile.documentation
@@ -81,6 +81,8 @@ FROM base AS runner
 
 WORKDIR /app
 
+RUN apk add --no-cache openssl
+
 # Don't run production as root
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
@@ -107,7 +109,7 @@ RUN ln -s /app/node_modules/prisma/build/index.js ./node_modules/.bin/prisma
 
 
 
-# RUN mkdir /opt/documenso/
+COPY --chown=nextjs:nodejs ./docker/generate_cert_p12.sh ./generate_cert_p12.sh
 # Get the start script from docker/start.sh
 COPY --chown=nextjs:nodejs ./docker/start.sh ./start.sh
 
