--- a/.github/workflows/unified_build.yml
+++ b/.github/workflows/unified_build.yml
@@ -66,31 +66,18 @@ jobs:
       #     documenso-marketing-path: "apps/marketing/**"
       #     documenso-documentation-path: "apps/documentation/**"
 
+      - name: Filter Changed Files
+        uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          filters: |
+            web:
+              - 'apps/web/**'
+            marketing:
+              - 'apps/marketing/**'
+            documentation:
+              - 'apps/documentation/**'
 
-      # - name: Determine Changes
-      #   id: determine_changes
-      #   env:
-      #     GITHUB_EVENT_BEFORE: ${{ github.event.before || 'HEAD~1' }}
-      #     GITHUB_SHA: ${{ github.sha }}
-      #   run: |
-      #     ./.github/workflows/determine_changes.sh
-      # # chmod +x ./.github/workflows/determine_changes.sh
-
-      - name: Determine if Documentation site has changed
-        id: docs_app_check
-        # run: |
-        #   git diff --name-only ${{ github.event.pull_request.base.sha || github.event.before || 'HEAD~1' }} ${{ github.sha }} | grep -q "^apps/documentation/" && echo "changed=true" || echo "changed=false"
-        # shell: bash
-        run: |
-          if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
-            echo "changed=true"
-          elif [[ "${{ github.event_name }}" == "pull_request" ]]; then
-            if [[ "${{ github.event.pull_request.changed_files }}" =~ "apps/documentation/" ]]; then
-              echo "changed=true"
-            else
-              echo "changed=false"
-            fi
-          fi
       # - name: Build Documenso web
       #   if: steps.determine_changes.outputs.web_changed == 'true'
       #   env:
@@ -114,8 +101,7 @@ jobs:
       #       .
 
       - name: Build Documentation
-        if: steps.docs_app_check.outputs.changed == 'true'  
-        # if: steps.determine_changes.outputs.documentation_changed == 'true'
+        if: steps.filter.outputs.documentation == 'true' 
         env:
           BUILD_PLATFORM: 'amd64'
         run: |
@@ -140,7 +126,7 @@ jobs:
       #     docker push 898622234277.dkr.ecr.ap-northeast-1.amazonaws.com/signezily:marketing
 
       - name: Pushing documenso documentation image
-        if: steps.docs_app_check.outputs.changed == 'true'  
+        if: steps.filter.outputs.documentation == 'true'
         # if: steps.determine_changes.outputs.documentation_changed == 'true'
         # if: github.ref == 'refs/heads/main'
         #  && github.event_name == 'push'
