--- a/.github/workflows/unified_build.yml
+++ b/.github/workflows/unified_build.yml
@@ -1,6 +1,24 @@
 name: Unified Docker Build
 
 on:
+  workflow_dispatch:
+    inputs:
+      environment:
+        description: "Environment to run the action on"
+        required: true
+        type: choice
+        options:
+          - dev
+          - qa
+          - prod
+      ExecutionType:
+        description: "Terraform 'plan' or 'apply'"
+        type: choice
+        default: "plan"
+        options:
+          - "build"
+          - "push"
+          - "deploy"
   workflow_call:
   push:
     branches: ['main']
@@ -18,7 +36,7 @@ env:
   AWS_REGION: ap-northeast-1
   AWS_ACCOUNT: 898622234277
   ECR_REPOSITORY: "signezily"
-  SERVICE: "documenso-app-dev"
+  SERVICE: "documenso-app-"
   CLUSTER: "data"
 
 permissions:
@@ -36,7 +54,11 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
-
+      matrix:
+        environment:
+          - { name: "dev", docker_tag: "latest" }
+          - { name: "qa", docker_tag: "" }
+          - { name: "prod", docker_tag: "" }
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -53,19 +75,6 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Debuging
-        run: |
-          ls -la .github/actions/determine_changes
-          pwd
-
-      # - name: Call Determine Changes Workflow
-      #   id: determine_changes
-      #   uses: ./.github/actions/determine_changes
-      #   with:
-      #     documenso-web-path: "apps/web/**"
-      #     documenso-marketing-path: "apps/marketing/**"
-      #     documenso-documentation-path: "apps/documentation/**"
-
       - name: Filter Changed Files
         uses: dorny/paths-filter@v3
         id: filter
@@ -77,37 +86,38 @@ jobs:
               - 'apps/web/**'
             marketing:
               - '.github/workflows/unified_build.yml'
-              # - 'docker/Dockerfile.marketing'
-              # - 'apps/marketing/**'
+              - 'docker/Dockerfile.marketing'
+              - 'apps/marketing/**'
             documentation:
               - '.github/workflows/unified_build.yml'
               - 'docker/Dockerfile.documentation'
               - 'apps/documentation/**'
 
-      # - name: Build Documenso web
-      #   if: steps.determine_changes.outputs.web_changed == 'true'
-      #   env:
-      #     BUILD_PLATFORM: 'amd64'
-      #   run: |
-      #     docker build \
-      #       -f ./docker/Dockerfile \
-      #       --progress=plain \
-      #       -t "898622234277.dkr.ecr.ap-northeast-1.amazonaws.com/signezily:latest" \
-      #       .
+      - name: Build Documenso web
+        if: steps.filter.outputs.web_changed == 'true'
+        env:
+          BUILD_PLATFORM: 'amd64'
+        run: |
+          docker build \
+            -f ./docker/Dockerfile \
+            --progress=plain \
+            -t "898622234277.dkr.ecr.ap-northeast-1.amazonaws.com/signezily:latest" \
+            .
 
-      # - name: Build Marketing
-      #   if: steps.determine_changes.outputs.marketing_changed == 'true'
-      #   env:
-      #     BUILD_PLATFORM: 'amd64'
-      #   run: |
-      #     docker build \
-      #       -f ./docker/Dockerfile.marketing \
-      #       --progress=plain \
-      #       -t "898622234277.dkr.ecr.ap-northeast-1.amazonaws.com/signezily:marketing" \
-      #       .
+      - name: Build Marketing
+        if: steps.filter.outputs.marketing_changed == 'true'
+        env:
+          BUILD_PLATFORM: 'amd64'
+        run: |
+          docker build \
+            -f ./docker/Dockerfile.marketing \
+            --progress=plain \
+            -t "898622234277.dkr.ecr.ap-northeast-1.amazonaws.com/signezily:${{ matrix.environment.name }}-marketing" \
+            .
 
       - name: Build Documentation
-        if: steps.filter.outputs.documentation == 'true' 
+        continue-on-error: true
+        if: steps.filter.outputs.documentation == 'true'
         env:
           BUILD_PLATFORM: 'amd64'
         run: |
@@ -117,25 +127,19 @@ jobs:
             -t "898622234277.dkr.ecr.ap-northeast-1.amazonaws.com/signezily:documentation" \
             .
 
-      # - name: Pushing documenso web image
-      #   if: steps.determine_changes.outputs.web_changed == 'true'
-      #   # if: github.ref == 'refs/heads/main'
-      #   #  && github.event_name == 'push'
-      #   run: |
-      #     docker push 898622234277.dkr.ecr.ap-northeast-1.amazonaws.com/signezily:latest
+      - name: Pushing documenso web image
+        if: steps.filter.outputs.web == 'true' && github.ref == 'refs/heads/main' && github.event_name == 'push'
+        run: |
+          docker push 898622234277.dkr.ecr.ap-northeast-1.amazonaws.com/signezily:latest
       
-      # - name: Pushing documenso marketing image
-      #   if: steps.determine_changes.outputs.marketing_changed == 'true'
-      #   # if: github.ref == 'refs/heads/main'
-      #   #  && github.event_name == 'push'
-      #   run: |
-      #     docker push 898622234277.dkr.ecr.ap-northeast-1.amazonaws.com/signezily:marketing
+      - name: Pushing documenso marketing image
+        if: steps.filter.outputs.marketing == 'true' && github.ref == 'refs/heads/main' && github.event_name == 'push'
+        run: |
+          docker push 898622234277.dkr.ecr.ap-northeast-1.amazonaws.com/signezily:marketing
 
       - name: Pushing documenso documentation image
         if: steps.filter.outputs.documentation == 'true'
-        # if: steps.determine_changes.outputs.documentation_changed == 'true'
-        # if: github.ref == 'refs/heads/main'
-        #  && github.event_name == 'push'
+        # if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: |
           docker push 898622234277.dkr.ecr.ap-northeast-1.amazonaws.com/signezily:documentation
 
@@ -143,5 +147,5 @@ jobs:
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: |
           aws ecs update-service \
-            --cluster $CLUSTER --service $SERVICE \
+            --cluster $CLUSTER --service $SERVICE${{ matrix.environment.name }} \
             --force-new-deployment
