--- a/docker/testing/compose.yml
+++ b/docker/testing/compose.yml
@@ -23,10 +23,10 @@ services:
       - 1100:1100
 
   documenso:
-    # build:
-    #   context: ../../
-    #   dockerfile: docker/Dockerfile
-    image: documenso:buildx
+    build:
+      context: ../../
+      dockerfile: docker/Dockerfile
+    # image: documenso:buildx
     depends_on:
       database:
         condition: service_healthy
@@ -54,10 +54,10 @@ services:
     volumes:
       - ../../apps/web/example/cert.p12:/opt/documenso/cert.p12
   marketing:
-    # build:
-    #   context: ../../
-    #   dockerfile: docker/Dockerfile.marketing
-    image: marketing:buildx
+    build:
+      context: ../../
+      dockerfile: docker/Dockerfile.marketing
+    # image: marketing:buildx
     depends_on:
       database:
         condition: service_healthy
@@ -79,10 +79,10 @@ services:
     volumes:
       - ../../apps/web/example/cert.p12:/opt/documenso/cert.p12
   documentation:
-    # build:
-    #   context: ../../
-    #   dockerfile: docker/Dockerfile.marketing
-    image: documentation:buildx
+    build:
+      context: ../../
+      dockerfile: docker/Dockerfile.documentation
+    # image: documentation:buildx
     depends_on:
       database:
         condition: service_healthy
@@ -102,5 +102,5 @@ services:
       - DOCUMENSO_SIGNING_CERT_FILE="test cert string"
     ports:
       - 3002:3002
-    # volumes:
-    #   - ../../apps/web/example/cert.p12:/opt/documenso/cert.p12
+    volumes:
+      - ../../apps/web/example/cert.p12:/opt/documenso/cert.p12
