--- a/.github/workflows/unified_build.yml
+++ b/.github/workflows/unified_build.yml
@@ -89,8 +89,8 @@ jobs:
         uses: dorny/paths-filter@v3
         id: filter
         if: |
-          matrix.environment.name == 'dev' ||
-          (github.ref == 'refs/heads/main' && matrix.environment.name != 'dev')
+          "${{ matrix.environment.name }}" == 'dev' ||
+          (${{ github.ref }} == 'refs/heads/main' && ${{ matrix.environment.name }} != 'dev')
         with:
           filters: |
             web:
@@ -107,6 +107,7 @@ jobs:
               - 'apps/documentation/**'
 
       - name: Build Documenso web
+        continue-on-error: true
         if: |
           steps.filter.outputs.web_changed == 'true' ||
           ("${{ github.event_name }}" == "workflow_dispatch" &&
@@ -122,6 +123,7 @@ jobs:
             .
 
       - name: Build Marketing
+        continue-on-error: true
         if: |
           steps.filter.outputs.marketing_changed == 'true' ||
           ("${{ github.event_name }}" == "workflow_dispatch" &&
