--- a/.github/workflows/unified_build.yml
+++ b/.github/workflows/unified_build.yml
@@ -109,7 +109,7 @@ jobs:
       - name: Build Documenso web
         continue-on-error: true
         if: |
-          ${{ steps.filter.outputs.web_changed }} == 'true' ||
+          "${{ steps.filter.outputs.web_changed }}" == 'true' ||
           ("${{ github.event_name }}" == "workflow_dispatch" &&
           "${{ github.event.inputs.environment }}" == "${{ matrix.environment.name }}" &&
           "${{ github.event.inputs.options }}" == "build" && "${{ github.event.inputs.site }}" == "web")
