--- a/.github/workflows/unified_build.yml
+++ b/.github/workflows/unified_build.yml
@@ -109,11 +109,11 @@ jobs:
       - name: Build Documenso web
         continue-on-error: true
         if: |
-          "${{ steps.filter.outputs.web }}" == "true"
-          # ||
-          # ("${{ github.event_name }}" == "workflow_dispatch" &&
-          # "${{ github.event.inputs.environment }}" == "${{ matrix.environment.name }}" &&
-          # "${{ github.event.inputs.options }}" == "build" && "${{ github.event.inputs.site }}" == "web")
+          steps.filter.outputs.marketing == 'true' ||
+          (github.event_name == 'workflow_dispatch' &&
+          github.event.inputs.environment == matrix.environment.name &&
+          github.event.inputs.options == 'build' &&
+          github.event.inputs.site == 'marketing')
         env:
           BUILD_PLATFORM: 'amd64'
         run: |
