--- a/.github/workflows/unified_build.yml
+++ b/.github/workflows/unified_build.yml
@@ -89,8 +89,8 @@ jobs:
         uses: dorny/paths-filter@v3
         id: filter
         if: |
-          "${{ matrix.environment.name }}" == "dev" ||
-          ("${{ github.ref }}" == "refs/heads/main" && "${{ matrix.environment.name }}" != "dev")
+          ${{ matrix.environment.name == 'dev' ||
+          (github.ref == 'refs/heads/main' && matrix.environment.name != 'dev') }}
         with:
           filters: |
             web:
@@ -109,11 +109,11 @@ jobs:
       - name: Build Documenso web
         continue-on-error: true
         if: |
-          steps.filter.outputs.marketing == 'true' ||
+          steps.filter.outputs.web == 'true' ||
           (github.event_name == 'workflow_dispatch' &&
           github.event.inputs.environment == matrix.environment.name &&
           github.event.inputs.options == 'build' &&
-          github.event.inputs.site == 'marketing')
+          github.event.inputs.site == 'web')
         env:
           BUILD_PLATFORM: 'amd64'
         run: |
