--- a/.github/workflows/unified_build.yml
+++ b/.github/workflows/unified_build.yml
@@ -89,8 +89,8 @@ jobs:
         uses: dorny/paths-filter@v3
         id: filter
         if: |
-          ${{ matrix.environment.name == 'dev' ||
-          (github.ref == 'refs/heads/main' && matrix.environment.name != 'dev') }}
+          matrix.environment.name == 'demo' ||
+          (github.ref == 'refs/heads/main' && matrix.environment.name != 'dev')
         with:
           filters: |
             web:
@@ -109,7 +109,7 @@ jobs:
       - name: Build Documenso web
         continue-on-error: true
         if: |
-          steps.filter.outputs.web == 'true' ||
+          steps.filter.outputs.web == 'false' ||
           (github.event_name == 'workflow_dispatch' &&
           github.event.inputs.environment == matrix.environment.name &&
           github.event.inputs.options == 'build' &&
@@ -126,10 +126,11 @@ jobs:
       - name: Build Marketing
         continue-on-error: true
         if: |
-          "${{ steps.filter.outputs.marketing }}" == "true" ||
-          ("${{ github.event_name }}" == "workflow_dispatch" &&
-          "${{ github.event.inputs.environment }}" == "${{ matrix.environment.name }}" &&
-          "${{ github.event.inputs.options }}" == "build" && "${{ github.event.inputs.site }}" == "marketing")
+          steps.filter.outputs.marketing == 'true' ||
+          (github.event_name == 'workflow_dispatch' &&
+          github.event.inputs.environment == matrix.environment.name &&
+          github.event.inputs.options == 'build' &&
+          github.event.inputs.site == 'marketing')
         env:
           BUILD_PLATFORM: 'amd64'
         run: |
@@ -142,10 +143,11 @@ jobs:
       - name: Build Documentation
         continue-on-error: true
         if: |
-          "${{ steps.filter.outputs.documentation }}" == "true" ||
-          ("${{ github.event_name }}" == "workflow_dispatch" &&
-          "${{ github.event.inputs.environment }}" == "${{ matrix.environment.name }}" &&
-          "${{ github.event.inputs.options }}" == "build" && "${{ github.event.inputs.site }}" == "documentation")
+          steps.filter.outputs.documentation == 'true' ||
+          (github.event_name == 'workflow_dispatch' &&
+          github.event.inputs.environment == matrix.environment.name &&
+          github.event.inputs.options == 'build' &&
+          github.event.inputs.site == 'documentation')
         env:
           BUILD_PLATFORM: 'amd64'
         run: |
