--- a/.github/workflows/unified_build.yml
+++ b/.github/workflows/unified_build.yml
@@ -109,7 +109,7 @@ jobs:
       - name: Build Documenso web
         continue-on-error: true
         if: |
-          steps.filter.outputs.web == 'false' ||
+          steps.filter.outputs.web == 'true' ||
           (github.event_name == 'workflow_dispatch' &&
           github.event.inputs.environment == matrix.environment.name &&
           github.event.inputs.options == 'build' &&
@@ -126,7 +126,7 @@ jobs:
       - name: Build Marketing
         continue-on-error: true
         if: |
-          steps.filter.outputs.marketing == 'true' ||
+          steps.filter.outputs.marketing == 'false' ||
           (github.event_name == 'workflow_dispatch' &&
           github.event.inputs.environment == matrix.environment.name &&
           github.event.inputs.options == 'build' &&
